Documentation (#29)
* add documentation

* revisi seller

* add seller_id

* revisi fillable cart_id

* fix end of file

* call use product sync

* fix:carbon

* fix:carbon

* fix category_id

* feat:add midtrans payment

* feat:update documentasi

---------
